--- a/index.html
+++ b/index.html
@@ -249,18 +249,18 @@
 		<ul class="m-5 list-unstyled">
 			<li class="mt-5 mb-4 ">
 				<i class="fas fa-route text-white mr-3 fs-sm-18 fs-lg-20"></i>
-				<a hrf="./asannomre.html" class="text-decoration-none text-white my-5 fs-lg-20 fs-sm-18">Asan nömrə</a>
+				<a hrf="asannomre.html" class="text-decoration-none text-white my-5 fs-lg-20 fs-sm-18">Asan nömrə</a>
 			</li>
 			<li class="my-4">
 				<i class="fas fa-briefcase text-white mr-3 fs-sm-18 fs-lg-20"></i>
-				<a href="./koporativnomre.html"
+				<a href="koporativnomre.html"
 					class="text-decoration-none text-white  my-5 fs-lg-20 fs-sm-18">Korporativ
 					nömrə</a>
 			</li>
 			<hr class="bg-light">
 			<li class="my-4">
 				<i class="fas fa-bullhorn text-white mr-3 fs-sm-18 fs-lg-20"></i>
-				<a href="./campaigns.html"
+				<a href="campaigns.html"
 					class="text-decoration-none text-white my-5 fs-lg-20 fs-sm-18">Kampaniyalar</a>
 			</li>
 			<li class="my-4">
@@ -279,7 +279,7 @@
 			<hr class="bg-light">
 			<li class="my-4">
 				<i class="fas fa-list-ol text-white mr-3 fs-sm-18 fs-lg-20"></i>
-				<a href="#" class="text-decoration-none text-white my-5 fs-lg-20 fs-sm-18">Satılan nömrələr</a>
+				<a href="profile.html" class="text-decoration-none text-white my-5 fs-lg-20 fs-sm-18">Satılan nömrələr</a>
 			</li>
 			<li class="my-4">
 				<i class="fas fa-car text-white mr-3 fs-sm-18 fs-lg-20"></i>
