--- a/asannomre.html
+++ b/asannomre.html
@@ -246,7 +246,7 @@
 		<ul class="m-5 list-unstyled">
 			<li class="mt-5 mb-4 ">
 				<i class="fas fa-route text-white mr-3 fs-sm-18 fs-lg-20"></i>
-				<a hrf="./asannomre.html" class="text-decoration-none text-white my-5 fs-lg-20 fs-sm-18">Asan nömrə</a>
+				<a href="./asannomre.html" class="text-decoration-none text-white my-5 fs-lg-20 fs-sm-18">Asan nömrə</a>
 			</li>
 			<li class="my-4">
 				<i class="fas fa-briefcase text-white mr-3 fs-sm-18 fs-lg-20"></i>
@@ -426,7 +426,7 @@
 	</div>
 
 	<!-- main -->
-	<main>
+	<main class="h-100vh">
 		<div class="container mb-5">
 			<div class="row my-5 text-center">
 				<div class="col-12">
