--- a/index.html
+++ b/index.html
@@ -249,7 +249,7 @@
 		<ul class="m-5 list-unstyled">
 			<li class="mt-5 mb-4 ">
 				<i class="fas fa-route text-white mr-3 fs-sm-18 fs-lg-20"></i>
-				<a hrf="asannomre.html" class="text-decoration-none text-white my-5 fs-lg-20 fs-sm-18">Asan nömrə</a>
+				<a href="./asannomre.html" class="text-decoration-none text-white my-5 fs-lg-20 fs-sm-18">Asan nömrə</a>
 			</li>
 			<li class="my-4">
 				<i class="fas fa-briefcase text-white mr-3 fs-sm-18 fs-lg-20"></i>
@@ -260,7 +260,7 @@
 			<hr class="bg-light">
 			<li class="my-4">
 				<i class="fas fa-bullhorn text-white mr-3 fs-sm-18 fs-lg-20"></i>
-				<a href="campaigns.html"
+				<a href="./profile.html"
 					class="text-decoration-none text-white my-5 fs-lg-20 fs-sm-18">Kampaniyalar</a>
 			</li>
 			<li class="my-4">
@@ -429,7 +429,7 @@
 
 	<div class="position-relative banner-bg">
 		<div class="overlay position-absolute w-100 "></div>
-		<div class="container mb-5 ">
+		<div class="container  ">
 			<div class="row py-5 text-center ">
 				<div class="col-12">
 					<div id="banner">
@@ -442,7 +442,7 @@
 
 	<!-- main -->
 
-	<main class="wrapper mb-5 bg-grey">
+	<main class="wrapper py-5 bg-grey">
 		<div class="container py-4">
 			<div id="page-content">
 				<table class="table table-borderless my-5" id="example">
