--- a/order.html
+++ b/order.html
@@ -248,7 +248,7 @@
 		<ul class="m-5 list-unstyled">
 			<li class="mt-5 mb-4 ">
 				<i class="fas fa-route text-white mr-3 fs-sm-18 fs-lg-20"></i>
-				<a hrf="./asannomre.html" class="text-decoration-none text-white my-5 fs-lg-20 fs-sm-18">Asan nömrə</a>
+				<a href="./asannomre.html" class="text-decoration-none text-white my-5 fs-lg-20 fs-sm-18">Asan nömrə</a>
 			</li>
 			<li class="my-4">
 				<i class="fas fa-briefcase text-white mr-3 fs-sm-18 fs-lg-20"></i>
@@ -429,7 +429,7 @@
 
 	<!-- main -->
 
-	<main class="container my-5">
+	<main class="container h-100vh my-5">
 		<h2 class="text-purple">Azercell</h2>
 		<div class="row my-4">
 			<div class="col-4  d-block">
