--- a/purchase-advertisement.html
+++ b/purchase-advertisement.html
@@ -251,7 +251,7 @@
 		<ul class="m-5 list-unstyled">
 			<li class="mt-5 mb-4 ">
 				<i class="fas fa-route text-white mr-3 fs-sm-18 fs-lg-20"></i>
-				<a hrf="./asannomre.html" class="text-decoration-none text-white my-5 fs-lg-20 fs-sm-18">Asan nömrə</a>
+				<a href="./asannomre.html" class="text-decoration-none text-white my-5 fs-lg-20 fs-sm-18">Asan nömrə</a>
 			</li>
 			<li class="my-4">
 				<i class="fas fa-briefcase text-white mr-3 fs-sm-18 fs-lg-20"></i>
@@ -307,7 +307,7 @@
 	</div>
 
 	<!-- main -->
-	<main class="my-5 container">
+	<main class="my-5 container h-100vh">
 		<div class="row ">
 			<div class="my-4 col-md-3 col-xs-12">
 				<ul class="sidebar-navigation p-0 m-0 list-unstyled position-relative">
