--- a/ads.html
+++ b/ads.html
@@ -241,12 +241,11 @@
 			</div>
 		</div>
 	</header>
-
 	<div id="mobile_menu" class="bg-purple z-100 position-absolute left-100 w-100 t-5 h-100 top-0 pt-100">
 		<ul class="m-5 list-unstyled">
 			<li class="mt-5 mb-4 ">
 				<i class="fas fa-route text-white mr-3 fs-sm-18 fs-lg-20"></i>
-				<a hrf="./asannomre.html" class="text-decoration-none text-white my-5 fs-lg-20 fs-sm-18">Asan nömrə</a>
+				<a href="./asannomre.html" class="text-decoration-none text-white my-5 fs-lg-20 fs-sm-18">Asan nömrə</a>
 			</li>
 			<li class="my-4">
 				<i class="fas fa-briefcase text-white mr-3 fs-sm-18 fs-lg-20"></i>
@@ -426,7 +425,7 @@
 
 	<!-- main -->
 
-	<main class="container my-5">
+	<main class="container my-5 h-100vh">
 		<h2 class="text-purple">Azercell</h2>
 
 		<form action="">
