--- a/payment.html
+++ b/payment.html
@@ -251,7 +251,7 @@
 		<ul class="m-5 list-unstyled">
 			<li class="mt-5 mb-4 ">
 				<i class="fas fa-route text-white mr-3 fs-sm-18 fs-lg-20"></i>
-				<a hrf="./asannomre.html" class="text-decoration-none text-white my-5 fs-lg-20 fs-sm-18">Asan nömrə</a>
+				<a href="./asannomre.html" class="text-decoration-none text-white my-5 fs-lg-20 fs-sm-18">Asan nömrə</a>
 			</li>
 			<li class="my-4">
 				<i class="fas fa-briefcase text-white mr-3 fs-sm-18 fs-lg-20"></i>
@@ -308,7 +308,7 @@
 
 
 	<!-- main -->
-	<main class="my-5 container">
+	<main class="my-5 container h-100vh">
 		<div class="row ">
 			<div class="my-4 col-md-3 col-xs-12">
 				<ul class="sidebar-navigation p-0 m-0 list-unstyled position-relative">
@@ -353,7 +353,7 @@
 								<option>10 ay</option>
 							</select>
 						</div>
-						<div class="col-md-2">100 AZN</div>
+						<div class="col-md-2"><input type="number" class="form-control" placeholder="100 AZN"></div>
 						<div class="col-md-2">
 							<button type="submit" class="btn bg-purple text-white  shadow-sm rounded "
 								style="border: 1px solid #d2acee; width: 150px;">Göndər</button>
