some little changes

--- a/order.html
+++ b/order.html
@@ -100,7 +100,7 @@
 
 													</div>
 													<div class="modal-footer justify-content-center">
-														<a href="" class="text-decoration-none "
+														<a href="" class="text-decoration-none text-primary"
 															data-target="#register_page" data-toggle="modal">Saytda
 															hesabınız yoxdursa, qeydiyyatdan
 															keçin</a>
@@ -203,7 +203,7 @@
 
 													</div>
 													<div class="modal-footer justify-content-center">
-														<a href="" class="text-decoration-none "
+														<a href="" class="text-decoration-none text-primary"
 															data-target="#login_page" data-toggle="modal">Saytda
 															qeydiyyasınız varsa,daxil olun</a>
 													</div>
