--- a/checking.html
+++ b/checking.html
@@ -103,7 +103,7 @@
 
 													</div>
 													<div class="modal-footer justify-content-center">
-														<a href="" class="text-decoration-none "
+														<a href="" class="text-decoration-none text-primary"
 															data-target="#register_page" data-toggle="modal">Saytda
 															hesabınız yoxdursa, qeydiyyatdan
 															keçin</a>
@@ -206,7 +206,7 @@
 
 													</div>
 													<div class="modal-footer justify-content-center">
-														<a href="" class="text-decoration-none "
+														<a href="" class="text-decoration-none text-primary"
 															data-target="#login_page" data-toggle="modal">Saytda
 															qeydiyyasınız varsa,daxil olun</a>
 													</div>
