--- a/index.html
+++ b/index.html
@@ -97,8 +97,8 @@
 																</div>
 																<button type="submit"
 																	class="btn btn-outline submit-btn w-100 shadow"
-																	id="load2"data-style="zoom-out"
-																	data-loading-text="<i class='fa fa-spinner fa-spin '></i> Processing Order">Daxil
+																	id="btn-one" data-style="zoom-out"
+																	>Daxil
 																	olun</button>
 															</div>
 														</div>
@@ -203,7 +203,9 @@
 																</form>
 
 																<button type="submit"
-																	class="btn btn-outline submit-btn w-100 shadow" data-style="zoom-out">Qeydiyyat</button>
+																	class="btn btn-outline submit-btn w-100 shadow"
+																	id="btn-one"
+																	data-style="zoom-out">Qeydiyyat</button>
 															</div>
 														</div>
 
@@ -1420,12 +1422,8 @@
 			$("#register_page").modal("hide");
 		});
 
-		$('.btn-outline').on('click', function () {
-			var $this = $(this);
-			$this.button('loading');
-			setTimeout(function () {
-				$this.button('reset');
-			}, 8000);
+		$('#btn-one').click(function () {
+			$('#btn-one').html('<span class="spinner-border spinner-border-sm mr-2" role="status" aria-hidden="true"></span>Loading...').attr('disabled', true);
 		});
 
 	</script>
