--- a/order.html
+++ b/order.html
@@ -229,7 +229,7 @@
 									</a>
 								</li>
 								<li>
-									<div class="hamburger hamburger--spring position-relative z " id="open_menu"
+									<div class="hamburger hamburger--spring position-relative z-middle " id="open_menu"
 										style="top: -9px;">
 										<div class="hamburger-box">
 											<div class="hamburger-inner z"></div>
