--- a/profile.html
+++ b/profile.html
@@ -34,7 +34,7 @@
 							</a>
 						</div>
 						<div class="col-3">
-							<div class="hamburger hamburger--spring position-relative z " id="open_menu"
+							<div class="hamburger hamburger--spring position-relative z-middle" id="open_menu"
 								style="top: -9px;">
 								<div class="hamburger-box">
 									<div class="hamburger-inner z"></div>
