--- a/changepassword.html
+++ b/changepassword.html
@@ -14,6 +14,35 @@
 
 <body class="position-relative">
 	<!-- header -->
+	<div class="bg-black">
+		<div class="container">
+			<div class="row d-flex align-items-center justify-content-around py-2">
+				<div class="col-4">
+					<div class="btn-group mb-3 ">
+						<a type="button" class="btn dropdown-toggle" data-toggle="dropdown" aria-haspopup="true"
+							aria-expanded="false" style="color: rgb(255, 255, 255);">
+							<span class="custom-icon custom-icon-flag-az"></span>
+						</a>
+						<div class="dropdown-menu">
+							<a class="dropdown-item" href="#">Az</a>
+							<a class="dropdown-item" href="#">Rus</a>
+							<a class="dropdown-item" href="#">Eng</a>
+						</div>
+					</div>
+				</div>
+				<div class="col-4 d-flex justify-content-end align-items-center">
+					<i class="fas fa-phone-alt fs-lg-11 text-white mr-2"></i>
+					<span class="fs-lg-11 text-white font-weight-lighter">+994502210176</span>
+				</div>
+				<div class="col-4 d-flex justify-content-end align-items-center">
+					<i class="fas fa-envelope fs-lg-11 text-white mr-2"></i>
+					<span class="fs-lg-11 text-white font-weight-lighter">+994502210176</span>
+				</div>
+				
+				
+			</div>
+		</div>
+	</div>
 	<header class="bg-grey">
 		<div class="container py-3">
 			<div class="row d-flex align-items-center justify-content-between">
