--- a/asannomre.html
+++ b/asannomre.html
@@ -180,7 +180,7 @@
 														</div>
 													</div>
 													<div class="modal-footer justify-content-center">
-														<a href="#" id="tikla"
+														<a href="#" id="clickbutton"
 															class="text-decoration-none text-primary"
 															data-target="#login_page" data-toggle="modal">Saytda
 															qeydiyyasınız varsa,daxil olun</a>
@@ -274,7 +274,7 @@
 
 													</div>
 													<div class="modal-footer justify-content-center">
-														<a href="#" id="tikla"
+														<a href="#" id="clickbutton"
 															class="text-decoration-none text-primary"
 															data-target="#login_page" data-toggle="modal">Saytda
 															qeydiyyasınız varsa,daxil olun</a>
@@ -362,7 +362,7 @@
 
 													</div>
 													<div class="modal-footer justify-content-center">
-														<a href="#" id="tikla"
+														<a href="#" id="clickbutton"
 															class="text-decoration-none text-primary"
 															data-target="#login_page" data-toggle="modal">Saytda
 															qeydiyyasınız varsa,daxil olun</a>
@@ -739,6 +739,9 @@
 
 			return false;
 		}
+		$("#clickbutton").click(function () {
+			$(".modal").modal("hide");
+		});
 	</script>
 </body>
 </html>
