--- a/order.html
+++ b/order.html
@@ -181,7 +181,7 @@
 														</div>
 													</div>
 													<div class="modal-footer justify-content-center">
-														<a href="#" id="tikla"
+														<a href="#" id="clickbutton"
 															class="text-decoration-none text-primary"
 															data-target="#login_page" data-toggle="modal">Saytda
 															qeydiyyasınız varsa,daxil olun</a>
@@ -275,7 +275,7 @@
 
 													</div>
 													<div class="modal-footer justify-content-center">
-														<a href="#" id="tikla"
+														<a href="#" id="clickbutton"
 															class="text-decoration-none text-primary"
 															data-target="#login_page" data-toggle="modal">Saytda
 															qeydiyyasınız varsa,daxil olun</a>
@@ -363,7 +363,7 @@
 
 													</div>
 													<div class="modal-footer justify-content-center">
-														<a href="#" id="tikla"
+														<a href="#" id="clickbutton"
 															class="text-decoration-none text-primary"
 															data-target="#login_page" data-toggle="modal">Saytda
 															qeydiyyasınız varsa,daxil olun</a>
@@ -765,6 +765,10 @@
 			}
 			return false;
 		}
+
+		$("#clickbutton").click(function () {
+			$(".modal").modal("hide");
+		});
 	</script>
 </body>
 </html>
