--- a/index.html
+++ b/index.html
@@ -474,9 +474,8 @@
 	<div class="bg-search-purple">
 		<div class="container">
 			<div class="row  d-flex justify-content-around align-items-center ">
-				<div class="col-10 serch-table">
+				<div class="col-12 serch-table">
 					<div class="row d-flex justify-content-around align-items-center my-3">
-
 						<div class="dropdown_td my-2 col-lg-2 col-md-6 col-xs-6 btn-group bootstrap-select">
 							<select id="how_search" class="selectpicker shadow rounded p-2 " name="search_type"
 								tabindex="-98" style="width: 100%; background-color: white;">
@@ -583,7 +582,7 @@
 						</div>
 						<div class=" my-2 col-lg-1 col-md-6 col-xs-6 w-100">
 							<button type="submit" onclick="alertFunction()"
-								class="btn  bg-white w-100 shadow tap-hover">Tap</button>
+								class="btn  bg-white w-100 shadow tap-hover">Axtar</button>
 						</div>
 						<div class=" my-2 col-lg-1 col-md-6 col-xs-6 ">
 							<a href="#" class=" btn  w-100 bg-white shadow sil-hover">Sil</a>
