--- a/index.html
+++ b/index.html
@@ -416,6 +416,10 @@
 	<div id="mobile_menu" class="bg-purple z-100 position-absolute left-100 w-100 t-5 h-120vh top-0 pt-100">
 		<ul class="m-5 list-unstyled">
 			<li class="mt-5 mb-3 ">
+				<i class="fas fa-home text-white mr-3 fs-sm-12 fs-lg-20"></i>
+				<a href="./asannomre.html" class="text-decoration-none text-white my-5 fs-lg-20 fs-sm-12">Ana səhifə</a>
+			</li>
+			<li class="my-3 ">
 				<i class="fas fa-route text-white mr-3 fs-sm-12 fs-lg-20"></i>
 				<a href="./asannomre.html" class="text-decoration-none text-white my-5 fs-lg-20 fs-sm-12">Asan nömrə</a>
 			</li>
